flotta/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: flotta-controller-manager
    openshift.io/cluster-monitoring: "true"
    pod-security.kubernetes.io/enforce: privileged
  name: flotta
