flotta/23-flotta-edge-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flotta-edge-api
  name: flotta-edge-api
  namespace: flotta
spec:
  ports:
  - name: yggds
    port: 8043
    protocol: TCP
    targetPort: yggds
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app: flotta-edge-api
  type: ClusterIP
