flotta/24-flotta-webhook-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flotta-webhook-service
  namespace: flotta
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: flotta-controller-manager
