flotta/flotta-controller-manager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flotta-controller-manager
  name: flotta-controller-manager-metrics-service
  namespace: flotta
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  - name: http
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app: flotta-controller-manager
